# Hogrin

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-desktop.yml
android/: AndroidManifest.xml
src/app/: main.cpp
src/common/: config.h  types.h
src/core/include/: messenger_core.h
src/core/src/: messenger_core.cpp
src/crypto/include/: crypto_manager.h
src/crypto/src/: crypto_manager.cpp
src/db/include/: db_manager.h  local_db.h
src/db/src/: db_manager.cpp  local_db.cpp
src/network/include/: bootstrap_client.h  network_manager.h  tcp_connection.h
src/network/src/: bootstrap_client.cpp  network_manager.cpp  tcp_connection.cpp
src/ui/backend/: ui_handler.cpp  ui_handler.h
src/ui/qml/: Main.qml
src/ui/qml/components/: AccentButton.qml  AuthScreen.qml  AvatarCircle.qml  ChatArea.qml  ChatList.qml  MessageDelegate.qml  ModernField.qml  ModernSwitch.qml  SectionLabel.qml  SettingsCard.qml  Style.qml
src/updater/: update_checker.cpp  update_checker.h
